--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.8.2"
+    "react-router-dom": "^7.8.2",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "^18.11.13",
