--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@reduxjs/toolkit": "^2.9.0",
+    "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^7.6.19",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
