--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@reduxjs/toolkit": "^2.9.0",
     "@tanstack/react-table": "^8.21.3",
     "framer-motion": "^7.6.19",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.62.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.20",
     "@types/node": "^18.11.13",
     "@types/react": "^18.0.26",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
