--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "apollo-server": "^3.13.0",
     "bcrypt": "^6.0.0",
     "dotenv": "^17.2.2",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10",
     "pg": "^8.16.3"
